# just-scrape

./: .gitignore  .pre-commit-config.yaml  README.md  just-scrape.code-workspace  pyproject.toml
.claude/: settings.json  settings.local.json
src/just_scrape/: __init__.py  base_client.py  constants.py  exceptions.py  lib.py  protocol.py  update_files.py
src/just_scrape/_tools/: rebuild_models.py  remove_redundant_files.py
src/just_scrape/api/: get_buy_box_offers.py  get_new_title_buckets.py  get_new_titles.py  get_season_episodes.py  get_title_detail_article.py  get_url_title_details.py  just_watch_protocol.py
src/just_scrape/buy_box_offers/: __init__.py  models.json  models.py  query.py  request.py  response.py  response_models.json  response_models.py
src/just_scrape/buy_box_offers/request/: models.py  schema.json
src/just_scrape/buy_box_offers/response/: models.json  models.py  (+1 more)
src/just_scrape/custom_buy_box_offers/: __init__.py  models.json  models.py  query.py  request.py  response.py  response_models.json  response_models.py
src/just_scrape/custom_get_buy_box_offers/: __init__.py  response.py  response.schema.json
src/just_scrape/custom_season_episodes/: __init__.py  models.json  models.py  query.py  response_models.py
src/just_scrape/get_buy_box_offers/: __init__.py  request.py  response.py  response.schema.json
src/just_scrape/get_new_title_buckets/: __init__.py
src/just_scrape/get_new_titles/: __init__.py  response.py
src/just_scrape/get_season_episodes/: __init__.py
src/just_scrape/get_title_detail_article/: __init__.py
src/just_scrape/get_url_title_details/: __init__.py  query.py  request.py
src/just_scrape/new_title_buckets/: __init__.py  models.json  models.py  query.py  request.py  response.py  response_models.py
src/just_scrape/new_titles/: __init__.py  models.json  models.py  query.py  request.py  request.schema.json  response.py  response.schema.json  response_models.json  response_models.py
src/just_scrape/queries/: get_title_detail_article.py
src/just_scrape/search/: __init__.py  models.json  models.py  query.py  response_models.json  response_models.py
src/just_scrape/season_episodes/: __init__.py  models.json  models.py  query.py  request.py  response.py  response.schema.json  response_models.json  response_models.py
src/just_scrape/title_detail_article/: __init__.py  models.json  models.py  query.py  request.py  request.schema.json  response.py  response.schema.json  response_models.py
src/just_scrape/tools/: rebuild_models.py  remove_redundant_files.py
src/just_scrape/url_title_details/: __init__.py  models.json  models.py  query.py  request.py  response.py  response.schema.json  response_models.json  response_models.py
src/just_scrape/utils/: file_shaker.py  update_files.py
src/just_scrape/wrappers/: __init__.py
tests/: conftest.py  test_buy_box_offers.py  test_custom_buy_box_offers.py  test_custom_season_episodes.py  test_just_scrape.py  test_new_title_buckets.py  test_new_titles.py  test_proxied.py  test_search.py  test_season_episodes.py  test_title_detail_article.py  test_url_title_details.py  test_wrappers.py  utils.py
(+173 files in other folders)
