[project]
name = "just-scrape"
version = "0.1.0"
description = "Unofficial JustWatch API"
readme = "README.md"
authors = [
    { name = "ryn-cx", email = "84663588+ryn-cx@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gapi",
    "requests>=2.32.5",
    "ruff>=0.12.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "prek>=0.3.2",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
]

[tool.ruff.lint]
select = ["ALL"] # Enable all linters.

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # Asserts should be allowed in tests.

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.uv.sources]
gapi = { git = "https://github.com/ryn-cx/gapi" }
